# wanwatch

./: .gitignore  LICENSE  README.md  RUNBOOK.md  index.html  pyproject.toml
scripts/: publish_dashboard  setup_wan_task.ps1  wan_monitor.sh  wanctl
src/wanwatch/: cli.py
